# omp-task

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Canvas.cpp  Canvas.h  Connection.cpp  Connection.h  Ellipse.cpp  Ellipse.h  Figure.cpp  Figure.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  Rectangle.cpp  Rectangle.h  ToolPanel.cpp  ToolPanel.h  Triangle.cpp  Triangle.h  config.h  main.cpp
src/Figures/: Ellipse.cpp  Ellipse.h  Figure.cpp  Figure.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
